Developer, Resource,Description Controller. MasterPage.

--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
@@ -7,7 +7,7 @@
 # http://www.tdg-seville.info/License.html
 
 demo.title				= Title
-demo.momentReleased		= Released Date (DD/MM/YYYY HH:mm)
+demo.momentReleased		= Released Date
 
 demo.descriptions		= Descriptions
 demo.resources 			= Resources
