--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
@@ -7,6 +7,15 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.home 					= Home
+master.page.public.catalogueDemo	= Demos Catalogue
+master.page.search.demo				= Search Demos
+master.page.register				= Register as Developer
+master.page.administrator.dashboard	= Dashboard
+
+master.page.developer.mydemos			= My Demos
+master.page.developer.createDemo		= Create a new Demo
+
+master.page.profile					= Profile
 
 
 
