--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
@@ -7,6 +7,15 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.home 					= Inicio
+master.page.public.catalogueDemo	= Catálogo de Demos
+master.page.search.demo				= Buscar Demos
+master.page.register				= Registrarse como Desarrollador
+master.page.administrator.dashboard	= Tablero
+
+master.page.developer.mydemos			= Mis Demos
+master.page.developer.createDemo		= Crear nueva Demo
+
+master.page.profile					= Perfil
 
 
 master.page.login 					= Entrar
