--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
@@ -8,7 +8,7 @@
 
 
 demo.title				= Titulo
-demo.momentReleased		= Fecha de publicación (DD/MM/AAAA HH:mm)
+demo.momentReleased		= Fecha de publicación
 
 demo.descriptions		= Descripciones
 
