Dsiplay,List Demos,Resources,Descriptions.

--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
@@ -7,7 +7,7 @@
 # http://www.tdg-seville.info/License.html
 
 demo.title				= Title
-demo.momentReleased		= Released Date
+demo.momentReleased		= Released Date (DD/MM/YYYY HH:mm)
 
 demo.descriptions		= Descriptions
 demo.resources 			= Resources
@@ -29,6 +29,8 @@ demo.comments			= Comments of the Demo
 comment.title			= Title
 comment.user			= User
 comment.actor			= User
+comment.moment			= Create Moment
+comment.author			= User
 comment.stars			= Stars
 comment.display			= Display
 comment.create			= Create comment
