--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
@@ -8,7 +8,7 @@
 
 
 demo.title				= Titulo
-demo.momentReleased		= Fecha de publicación
+demo.momentReleased		= Fecha de publicación (DD/MM/AAAA HH:mm)
 
 demo.descriptions		= Descripciones
 
@@ -30,6 +30,7 @@ demo.confirm.delete.descriptions	= ¡Advertencia! Si usted elimina esta demo, las
 
 demo.comments			= Comentarios del viaje
 comment.title			= Título
+comment.moment			= Momento de creación
 comment.author			= Usuario
 comment.actor			= Usuario
 comment.stars			= Estrellas
