message2 por message.

--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
@@ -16,5 +16,6 @@ developer.conditionsNotAcepted = Condiciones no aceptadas
 developer.invalid.password = Contraseña Inválida
 developer.not.phone.neither.mail = Debe registrar una dirección de correo electrónico o un teléfono
 developer.phone.badLenght = Longitud del Teléfono incorrecta
+developer.error = No se pudo realizar esta operación
 
 return = volver
