--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
@@ -16,6 +16,6 @@ developer.conditionsNotAcepted = Condtions Not Acepted
 developer.invalid.password = Invalid Passwrod
 developer.not.phone.neither.mail = You must register a phoner or an email address
 developer.phone.badLenght = Phone Length invalid
-developer.error = Couldn't  Finish the operation.
+developer.error = Couldn't  finish the operation.
 
 return = return
