Manage his or her demos, which includes publishing them, listing them, modifying them, and/or deleting them.(Descriptions and Resources). Display a dashboard with the following information regarding his or her demos:  Average number of comments per demo.  Average number of stars per demo.(no complete).  List of demos sorted according the average number of stars that they’ve got.

--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
@@ -23,7 +23,7 @@ demo.delete				= Delete
 demo.commit.error 			= Cannot commit this operation
 demo.commit.ok				= Operation performed successfully
 demo.confirm.delete			= Are you sure?
-demo.confirm.delete.dailyPlans	= Warning! If you remove this demo, this demo descriptions also be deleted. Are you sure?
+demo.confirm.delete.descriptions	= Warning! If you remove this demo, this demo descriptions also be deleted. Are you sure?
 
 demo.comments			= Comments of the Demo
 comment.title			= Title
