--- a/Acme-Demos-1.0/src/main/webapp/views/description/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/description/messages.properties
@@ -15,6 +15,20 @@ description.cancel				= Cancel
 description.create					= Create a new Description
 description.demo				= Resulting demo
 description.display			= Details
+description.edit			= Edit
 
 description.commit.error 			= Cannot commit this operation
 description.commit.ok				= Operation performed successfully
+
+description.CHI		=CHI
+description.SPA		=SPA
+description.ENG		=ENG
+description.HIN		=HIN
+description.ARA		=ARA
+description.POR		=POR
+description.RUS		=RUS
+description.JPN		=JPN
+description.GER		=GER
+description.FRE		=FRE
+description.KOR		=KOR
+description.ITA		=ITA
