--- a/Acme-Demos-1.0/src/main/webapp/views/description/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/description/messages_es.properties
@@ -16,6 +16,20 @@ description.cancel				= Cancelar
 description.create					= Crear una nueva Descripción
 description.demo				= Demo resultante
 description.display			= Detalles
+description.edit			= Editar
 
 description.commit.error 		= No se puede realizar la operación
 description.commit.ok			= Operación realizada con éxito
+
+description.CHI		=CHI
+description.SPA		=SPA
+description.ENG		=ENG
+description.HIN		=HIN
+description.ARA		=ARA
+description.POR		=POR
+description.RUS		=RUS
+description.JPN		=JPN
+description.GER		=GER
+description.FRE		=FRE
+description.KOR		=KOR
+description.ITA		=ITA
