--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
@@ -10,7 +10,11 @@ developer.phone = Phone
 developer.acceptConditions = Accept Conditions
 developer.registration = Terms & Conditions
 developer.edit.save =  Sign Up
-
+developer.dashboard.1	=Average number of comments per demo: 
+developer.dashboard.2	= Average number of stars per demo:
+developer.dashboard.3	= List of demos sorted according the average number of stars that they've got :  
+administrator.dashboard.title	= Title
+administrator.dashboard.momentReleased	=Released Moment
 developer.duplicated = Duplicated User
 developer.conditionsNotAcepted = Condtions Not Acepted
 developer.invalid.password = Invalid Passwrod
