--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
@@ -11,6 +11,12 @@ developer.acceptConditions = Aceptar Términos y Condiciones
 developer.registration = Términos y Condiciones
 developer.edit.save = Registrarse
 
+developer.dashboard.1	=Número promedio de comentarios por demo: 
+developer.dashboard.2	= Número promedio de estrellas por demo:
+developer.dashboard.3	= Lista de demos ordenados según el número promedio de estrellas que tienen: 
+administrator.dashboard.title	= Título 
+administrator.dashboard.momentReleased	= Fecha de Publicación
+
 developer.duplicated = Usuario Duplicado
 developer.conditionsNotAcepted = Condiciones no aceptadas
 developer.invalid.password = Contraseña Inválida
