--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
@@ -14,7 +14,7 @@ master.page.administrator.dashboard	= Dashboard
 
 master.page.developer.mydemos			= My Demos
 master.page.developer.createDemo		= Create a new Demo
-
+master.page.developer.dashboard		= Dashboard
 master.page.profile					= Profile
 
 
