--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
@@ -15,6 +15,8 @@ master.page.administrator.dashboard	= Tablero
 master.page.developer.mydemos			= Mis Demos
 master.page.developer.createDemo		= Crear nueva Demo
 
+master.page.developer.dashboard			= Tablero
+
 master.page.profile					= Perfil
 
 
