--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
@@ -11,6 +11,7 @@ demo.momentReleased		= Released Date (DD/MM/YYYY HH:mm)
 
 demo.descriptions		= Descriptions
 demo.resources 			= Resources
+demo.comments			= Comments
 
 demo.save				= Save
 demo.cancel				= Cancel
@@ -25,7 +26,7 @@ demo.commit.ok				= Operation performed successfully
 demo.confirm.delete			= Are you sure?
 demo.confirm.delete.descriptions	= Warning! If you remove this demo, this demo descriptions also be deleted. Are you sure?
 
-demo.comments			= Comments of the Demo
+
 comment.title			= Title
 comment.user			= User
 comment.actor			= User
