--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
@@ -13,7 +13,7 @@ demo.momentReleased		= Fecha de publicación (DD/MM/AAAA HH:mm)
 demo.descriptions		= Descripciones
 
 demo.resources 			= Recursos
-
+demo.comments			= Comentarios
 
 demo.save				= Guardar
 demo.cancel				= Cancelar
@@ -28,7 +28,7 @@ demo.commit.ok			= Operación realizada con éxito
 demo.confirm.delete		= ¿Está seguro?
 demo.confirm.delete.descriptions	= ¡Advertencia! Si usted elimina esta demo, las descripciones de esta demo también serán borradas. ¿Está usted seguro?
 
-demo.comments			= Comentarios del viaje
+
 comment.title			= Título
 comment.moment			= Momento de creación
 comment.author			= Usuario
