--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
@@ -22,4 +22,4 @@ developer.not.phone.neither.mail = You must register a phoner or an email addres
 developer.phone.badLenght = Phone Length invalid
 developer.error = Couldn't  finish the operation.
 
-return = return
+return = Cancel
