--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
@@ -24,4 +24,4 @@ developer.not.phone.neither.mail = Debe registrar una dirección de correo electr
 developer.phone.badLenght = Longitud del Teléfono incorrecta
 developer.error = No se pudo realizar esta operación
 
-return = volver
+return = Cancelar
