--- a/Acme-Demos-1.0/src/main/webapp/views/comment/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/comment/messages.properties
@@ -6,5 +6,6 @@ comment.cancel = Cancel
 comment.display = Display
 
 comment.create = Add Comment
+comment.delete = Delete Comment
 comment.ok = Comment added successfully
 comment.commit.error = Couldn't finish the operation
