--- a/Acme-Demos-1.0/src/main/webapp/views/comment/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/comment/messages_es.properties
@@ -6,5 +6,6 @@ comment.cancel = Cancelar
 comment.display = Mostrar
 
 comment.create = Añadir Comentario
+comment.delete	= Eliminar comentario
 comment.commit.error = No se pudo completar la operación
 comment.ok = Comentario añadido correctamente.
