Register Investor. DashBoard Developer 1/3.

--- a/Acme-Demos-1.0/src/main/webapp/views/investor/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/investor/messages.properties
@@ -17,7 +17,8 @@ investor.passwordPast		= Actual password
 investor.confirmPassword	= Repeat password
 
 investor.accept				= I accept the terms and conditions of this website.
-
+investor.userAccount = User Account
+investor.personalInfo = Personal Info
 investor.save				= Save
 
 
