--- a/Acme-Demos-1.0/src/main/webapp/views/investor/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/investor/messages_es.properties
@@ -16,6 +16,8 @@ investor.password 			= Contraseña
 investor.passwordPast		= Contraseña actual
 investor.confirmPassword	= Repite contraseña
 investor.accept				= Acepto los términos y condiciones de este sitio web.
+investor.userAccount = Cuenta de Usuario
+investor.personalInfo = Información Personal
 
 investor.save				= Guardar
 investor.cancel				= Cancelar
