--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
@@ -9,7 +9,8 @@
 master.page.home 					= Home
 master.page.public.catalogueDemo	= Demos Catalogue
 master.page.search.demo				= Search Demos
-master.page.register				= Register as Developer
+master.page.DeveloperRegister		= Register as Developer
+master.page.InvestorRegister		= Register as Investor
 master.page.administrator.dashboard	= Dashboard
 
 master.page.developer.mydemos			= My Demos
@@ -21,7 +22,7 @@ master.page.profile					= Profile
 
 master.page.login 					= Login
 master.page.logout 					= Logout
-master.page.register				= Register
+
 
 master.page.termsConditions			= Terms and Conditions
 modal.privacy.name = Privacy Police
