--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
@@ -9,7 +9,8 @@
 master.page.home 					= Inicio
 master.page.public.catalogueDemo	= Catálogo de Demos
 master.page.search.demo				= Buscar Demos
-master.page.register				= Registrarse como Desarrollador
+master.page.DeveloperRegister		= Registrarse como Desarrollador
+master.page.InvestorRegister		= Registrarse como Inversor
 master.page.administrator.dashboard	= Tablero
 
 master.page.developer.mydemos			= Mis Demos
@@ -22,7 +23,7 @@ master.page.profile					= Perfil
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
-master.page.register				= Registro
+
 
 master.page.termsConditions			= Términos y Condiciones
 modal.privacy.name = Política de Privacidad
