--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
@@ -18,7 +18,7 @@ master.page.developer.createDemo		= Create a new Demo
 master.page.developer.dashboard		= Dashboard
 master.page.profile					= Profile
 
-
+master.page.investor.investments    = My Investments
 
 master.page.login 					= Login
 master.page.logout 					= Logout
