--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
@@ -20,6 +20,7 @@ master.page.developer.dashboard			= Tablero
 
 master.page.profile					= Perfil
 
+master.page.investor.investments    = Mis inversiones
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
