Developer Register Corrected

--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages.properties
@@ -1,7 +1,7 @@
 developer.userAccount = User Account
-developer.userAccount.username = Username
-developer.userAccount.password = Password
-developer.userAccount.repeatPassword = Confirm Password
+developer.username = Username
+developer.password = Password
+developer.repeatPassword = Confirm Password
 developer.personalInfo = Personal Info
 developer.name = Name
 developer.surname = Surnames
