--- a/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/developer/messages_es.properties
@@ -1,7 +1,7 @@
 developer.userAccount = Cuenta de Usuario
-developer.userAccount.username = Nombre de Usuario
-developer.userAccount.password = Contraseña
-developer.userAccount.repeatPassword = Confirme Contraseña
+developer.username = Nombre de Usuario
+developer.password = Contraseña
+developer.repeatPassword = Confirme Contraseña
 developer.personalInfo = Información Personal
 developer.name = Nombre
 developer.surname = Apellidos
