--- a/Acme-Demos-1.0/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/administrator/messages.properties
@@ -9,3 +9,9 @@
 administrator.dashboard.averageCommentsPerDemo					= Average number of comments per demo
 administrator.dashboard.demos25PercentageMoreCommentsThanAvg	= Demos that have got at least 25% more comments than the average
 administrator.dashboard.developersMoreCommentsThanAvg			= Developers whose demos have got more comments than the average
+
+administrator.dashboard.ratioDemosWithInvestment				= Ratio of demos that have got an investment
+administrator.dashboard.avgInvestmentsPerInvestor				= Average of the number of investments per investor
+administrator.dashboard.stddevInvestmentsPerInvestor			= Standard deviation of the number of investments per investor
+administrator.dashboard.avgMoneyInvestInDemos					= Average amount of money that investors invest in demos
+administrator.dashboard.avgNumberInstalmentsPerInvestment		= Average number of instalments per investment
