--- a/Acme-Demos-1.0/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/administrator/messages_es.properties
@@ -9,3 +9,9 @@
 administrator.dashboard.averageCommentsPerDemo					= Número medio de comentarios por demostración
 administrator.dashboard.demos25PercentageMoreCommentsThanAvg	= Demostraciónes que han logrado tener al menos un 25% más de comentarios que la media
 administrator.dashboard.developersMoreCommentsThanAvg			= Desarrolladores cuyas demostraciones han conseguido más comentarios que la media
+
+administrator.dashboard.ratioDemosWithInvestment				= Ratio de demostraciones que tienen inversión
+administrator.dashboard.avgInvestmentsPerInvestor				= Media del número de inversiones por inversor
+administrator.dashboard.stddevInvestmentsPerInvestor			= Desviación estándar del número de inversiones por inversor
+administrator.dashboard.avgMoneyInvestInDemos					= Media de dinero que los inversores invierten en demostraciones
+administrator.dashboard.avgNumberInstalmentsPerInvestment		= Media de cuotas por inversión
