--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages.properties
@@ -12,6 +12,7 @@ master.page.search.demo				= Search Demos
 master.page.DeveloperRegister		= Register as Developer
 master.page.InvestorRegister		= Register as Investor
 master.page.administrator.dashboard	= Dashboard
+master.page.register		        = Register		
 
 master.page.developer.mydemos			= My Demos
 master.page.developer.createDemo		= Create a new Demo
