--- a/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/master-page/messages_es.properties
@@ -12,6 +12,7 @@ master.page.search.demo				= Buscar Demos
 master.page.DeveloperRegister		= Registrarse como Desarrollador
 master.page.InvestorRegister		= Registrarse como Inversor
 master.page.administrator.dashboard	= Tablero
+master.page.register				= Registro
 
 master.page.developer.mydemos			= Mis Demos
 master.page.developer.createDemo		= Crear nueva Demo
