--- a/Acme-Demos-1.0/src/main/webapp/views/investment/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/investment/messages_es.properties
@@ -20,6 +20,7 @@ investment.display				= Mostrar
 investment.create				= Nueva Inversión
 investment.instalment.create	= Crear pagos
 
-
+investment.confirm.create.1		= ¿Seguro que quiere crear una inversión?
+investment.confirm.create.2		= ¿Estás 100% seguro?
 
 investment.commit.error 		= No se puede realizar la operación
