Fixed views errors.

--- a/Acme-Demos-1.0/src/main/webapp/views/resource/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/resource/messages_es.properties
@@ -11,7 +11,7 @@ resource.title				= Titulo
 resource.day			= Link
 
 resource.save				= Guardar
-resource.delete			= Borrar
+resource.delete			= Eliminar
 resource.cancel				= Cancelar
 resource.create				= Crear un nuevo recurso
 resource.display			= Mostrar
