--- a/Acme-Demos-1.0/src/main/webapp/views/investor/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/investor/messages_es.properties
@@ -13,6 +13,7 @@ investor.company				= Nombre de la Compañía
 investor.phone				= Teléfono
 investor.investorname			= Nombre de usuario
 investor.password 			= Contraseña
+investor.username			= Nombre de usuario
 investor.passwordPast		= Contraseña actual
 investor.confirmPassword	= Repite contraseña
 investor.accept				= Acepto los términos y condiciones de este sitio web.
@@ -23,11 +24,11 @@ investor.save				= Guardar
 investor.cancel				= Cancelar
 investor.display			= Mostrar
 
-investor.investments				= Viajes registrados por el usuario:
+investor.investments				= Inversiones registradas por el usuario:
 investment.title				= Título inversión
 investment.display			= Mostrar
 
-investor.investments				= Inversiones
+
 
 register.commit.error 		= No se puede realizar la operación
 register.commit.ok			= Operación realizada con éxito
