--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages.properties
@@ -24,7 +24,7 @@ demo.delete				= Delete
 demo.commit.error 			= Cannot commit this operation
 demo.commit.ok				= Operation performed successfully
 demo.confirm.delete			= Are you sure?
-demo.confirm.delete.descriptions	= Warning! If you remove this demo, this demo descriptions also be deleted. Are you sure?
+demo.confirm.delete.descriptions	= Warning! If you remove this demo, this demo descriptions, resources and investments also be deleted. Are you sure?
 
 
 comment.title			= Title
