--- a/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
+++ b/Acme-Demos-1.0/src/main/webapp/views/demo/messages_es.properties
@@ -26,7 +26,7 @@ demo.delete				= Eliminar
 demo.commit.error 		= No se puede realizar la operación
 demo.commit.ok			= Operación realizada con éxito
 demo.confirm.delete		= ¿Está seguro?
-demo.confirm.delete.descriptions	= ¡Advertencia! Si usted elimina esta demo, las descripciones de esta demo también serán borradas. ¿Está usted seguro?
+demo.confirm.delete.descriptions	= ¡Advertencia! Si usted elimina esta demo, las descripciones, recursos e inversiones de esta demo también serán borradas. ¿Está usted seguro?
 
 
 comment.title			= Título
